# Fake-News-Project

./: .gitignore  Justfile  Project-description.md  README.md  main.py  news_1_pl.py  notebook.py  notebook_clean.py  pyproject.toml  test.txt
__marimo__/session/: news_1_pl.py.json  notebook.py.json  notebook_clean.py.json
artifacts/models/: SVend-Martin.joblib  logistic_regression.pkl
artifacts/results/: SolVeig-Marie_results.txt
news/: 10,000_rows.csv  bert__1.ipynb  logits__1.ipynb  news_1.ipynb  news_1_pl.ipynb  news_part_1.ipynb  news_part_1__2.ipynb  news_part_2.ipynb  news_part_2__1.ipynb  news_part_3.ipynb  news_part_3__api_bert.ipynb  news_part_3__bert.ipynb  news_part_3__other.ipynb  news_part_3__svm.ipynb  news_part_4.ipynb  news_part_5.ipynb  part_3__2.ipynb  test_articles.txt  vectorizer_tfidf_ngram12_100k.joblib
news/.ipynb_checkpoints/: bert__2-checkpoint.ipynb  news1-checkpoint.py  news_1-checkpoint.ipynb  news_1_pl-checkpoint.ipynb  news_part_1-checkpoint.ipynb  news_part_2-checkpoint.ipynb  news_part_3__api_bert-checkpoint.ipynb  news_part_3__bert-checkpoint.ipynb  news_part_3__other-checkpoint.ipynb  news_part_4-checkpoint.ipynb  news_part_5-checkpoint.ipynb
news/liar_dataset/: aggregated.csv
news/models/: Lars_Mette_Lykke_Rasmussen.pkl  SVend-Martin_vect.pkl  SolVeig-Marie.pkl  vec_content.pkl  vec_meta.pkl
notebooks/: 01_preprocessing.ipynb  02_logreg_baseline.ipynb  03_svm_tfidf.ipynb  news_part_3.ipynb  notebook.py  notebook_clean.py  notebook_complex.py
src/: data.py  evaluation.py  features.py  models.py  preprocessing.py
(+6 files in other folders)
